Add Allure integration for enhanced reporting and screenshots

--- a/pytest.ini
+++ b/pytest.ini
@@ -20,6 +20,8 @@ addopts =
     --strict-markers
     --tb=short
     --capture=no
+    --alluredir=reports/allure-results
+    --clean-alluredir
     
 # Logging
 log_cli = true
