--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,18 @@ on:
 
 jobs:
   test:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        os: [ubuntu-latest]
-        python-version: ['3.10', '3.11', '3.12']
-        browser: [chromium, firefox, webkit]
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.12
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: 3.12
         cache: 'pip'
     
     - name: Install dependencies
@@ -33,17 +29,17 @@ jobs:
         pip install -r requirements.txt
     
     - name: Install Playwright browsers
-      run: playwright install --with-deps ${{ matrix.browser }}
+      run: playwright install --with-deps chromium
     
     - name: Run smoke tests
-      run: pytest -m smoke --browser ${{ matrix.browser }} --html=reports/report.html --self-contained-html
+      run: pytest --browser chromium --headless
       continue-on-error: false
     
     - name: Upload test report
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: test-report-${{ matrix.os }}-py${{ matrix.python-version }}-${{ matrix.browser }}
+        name: test-report-ubuntu-latest-py3.12-chromium
         path: reports/
         retention-days: 30
     
@@ -51,7 +47,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: allure-results-${{ matrix.os }}-py${{ matrix.python-version }}-${{ matrix.browser }}
+        name: test-report-ubuntu-latest-py3.12-chromium
         path: reports/allure-results/
         retention-days: 30
 
@@ -72,7 +68,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install flake8 black isort
     
     - name: Lint with flake8
       run: |
@@ -82,8 +77,4 @@ jobs:
     
     - name: Check code formatting with black
       run: black --check .
-      continue-on-error: true
-    
-    - name: Check import sorting with isort
-      run: isort --check-only .
       continue-on-error: true
