--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
       run: playwright install --with-deps chromium
     
     - name: Run smoke tests
-      run: pytest --browser chromium --headless
+      run: pytest --browser chromium
       continue-on-error: false
     
     - name: Upload test report
@@ -68,6 +68,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install flake8 black
     
     - name: Lint with flake8
       run: |
